# api/whitelist/types.go
@@ -1,0 +1,9 @@
+package whitelist
+
+type AddIPToWhitelistRequest struct {
+	IP string `json:"ip"`
+}
+
+type Response struct {
+	Message string `json:"msg"`
+}
